Upgrade to aurelia v0.12.0 and reestructured from like https://github.com/aurelia/skeleton-navigation

--- a/src/AureliaVS2015/src/app.html
+++ b/src/AureliaVS2015/src/app.html
@@ -1,5 +1,5 @@
 ﻿<template>
-    <import from='./elements/nav-bar'></import>
+    <require from='./elements/nav-bar'></require>
 
     <nav-bar router.bind="router"></nav-bar>
 
